create github pages

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/g">create free website</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header1-1" data-rv-view="2" style="background-image: url(assets/images/jumbotron.jpg);">
+<section class="engine"><a href="https://mobirise.ws/o">free mobile website builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header1-1" data-rv-view="2" style="background-image: url(assets/images/jumbotron.jpg);">
 
     
 
@@ -130,9 +130,9 @@
                 <div class="card cart-block">
                     <div class="card-img"><img src="assets/images/menulis-275x183.jpg" class="card-img-top"></div>
                     <div class="card-block">
-                        <h4 class="card-title">Menyusun RPP</h4>
+                        <h4 class="card-title"><a href="https://drive.google.com/file/d/1nTpiZlPvozQ3eRun4GH4pfj_4ilcbJxo/view?usp=sharing">Menyusun RPP</a></h4>
                         <h5 class="card-subtitle">(SE No 14 Tahun 2020)</h5>
-                        <p class="card-text">https://drive.google.com/file/d/1nTpiZlPvozQ3eRun4GH4pfj_4ilcbJxo/view?usp=sharing</p>
+                        <p class="card-text"></p>
                         <div class="card-btn"><a href="https://mobirise.com" class="btn btn-primary">MORE</a></div>
                     </div>
                 </div>
@@ -143,9 +143,9 @@
                 <div class="card cart-block">
                     <div class="card-img"><img src="assets/images/20190822-92910-600x450.jpg" class="card-img-top"></div>
                     <div class="card-block">
-                        <h4 class="card-title">Implemetasi Pembelajaran Kurikulum &nbsp;2013</h4>
+                        <h4 class="card-title"><a href="https://drive.google.com/file/d/0B9mqXZoe_X8uSURKMm0xU2R1YkU/view?usp=sharing">Implemetasi Pembelajaran Kurikulum &nbsp;2013</a></h4>
                         <h5 class="card-subtitle">Best Practise</h5>
-                        <p class="card-text">https://drive.google.com/file/d/0B9mqXZoe_X8uSURKMm0xU2R1YkU/view?usp=sharing</p>
+                        <p class="card-text"></p>
                         <div class="card-btn"><a href="https://mobirise.com" class="btn btn-primary">MORE</a></div>
                     </div>
                 </div>
@@ -156,9 +156,9 @@
                 <div class="card cart-block">
                     <div class="card-img"><img src="assets/images/download-282x178.jpg" class="card-img-top"></div>
                     <div class="card-block">
-                        <h4 class="card-title">Panduan Penilaian Kurikulum 2013</h4>
-                        <h5 class="card-subtitle">Google has a hi20ghly exhaustive list of fonts</h5>
-                        <p class="card-text">https://drive.google.com/file/d/0B9mqXZoe_X8uS3N5ZE93NFYwOVZQR19pZ0l1LU85ODZYbG84/view?usp=sharing</p>
+                        <h4 class="card-title"><a href="https://drive.google.com/file/d/0B9mqXZoe_X8uS3N5ZE93NFYwOVZQR19pZ0l1LU85ODZYbG84/view?usp=sharing">Panduan</a> Penilaian Kurikulum 2013</h4>
+                        <h5 class="card-subtitle"></h5>
+                        <p class="card-text"></p>
                         <div class="card-btn"><a href="https://mobirise.com" class="btn btn-primary">MORE</a></div>
                     </div>
                 </div>
@@ -170,8 +170,8 @@
                     <div class="card-img"><img src="assets/images/utube-275x183.jpg" class="card-img-top"></div>
                     <div class="card-block">
                         <h4 class="card-title">Link membuat alat evaluasi pembelajaran yang menarik</h4>
-                        <h5 class="card-subtitle">Mobirise gives you the freedom to develop</h5>
-                        <p class="card-text">Mobirise gives you the freedom to develop as many websites as you like given the fact that it is a desktop app.</p>
+                        <h5 class="card-subtitle"></h5>
+                        <p class="card-text"></p>
                         <div class="card-btn"><a href="https://mobirise.com" class="btn btn-primary">MORE</a></div>
                     </div>
                 </div>
@@ -194,8 +194,8 @@
                     <div class="card-img"><img src="assets/images/kahoot-298x169.jpg" class="card-img-top"></div>
                     <div class="card-block">
                         <h4 class="card-title"></h4>
-                        <h5 class="card-subtitle">Cara Mengakses Aplikasi Kahoot!</h5>
-                        <p class="card-text">https://drive.google.com/file/d/1KEfqGjA_4xgaduTSDtPcrfF7vwghbVbs/view?usp=drivesdk</p>
+                        <h5 class="card-subtitle"><a href="https://drive.google.com/file/d/1KEfqGjA_4xgaduTSDtPcrfF7vwghbVbs/view?usp=drivesdk">Cara Mengakses Aplikasi Kahoot!</a></h5>
+                        <p class="card-text"></p>
                         <div class="card-btn"><a href="https://mobirise.com" class="btn btn-primary">MORE</a></div>
                     </div>
                 </div>
@@ -206,9 +206,9 @@
                 <div class="card cart-block">
                     <div class="card-img"><img src="assets/images/download-2-300x168.jpg" class="card-img-top"></div>
                     <div class="card-block">
-                        <h4 class="card-title">Cara Mengakses Aplikasi Quizizz</h4>
-                        <h5 class="card-subtitle">One of Bootstrap 4's big points</h5>
-                        <p class="card-text">https://drive.google.com/file/d/1AfEbyLAQuqyDOt9SNL-_VDNe1hods_Q0/view?usp=drivesdk</p>
+                        <h4 class="card-title"><a href="https://drive.google.com/file/d/1AfEbyLAQuqyDOt9SNL-_VDNe1hods_Q0/view?usp=drivesdk">Cara</a> Mengakses Aplikasi Quizizz</h4>
+                        <h5 class="card-subtitle"></h5>
+                        <p class="card-text"></p>
                         <div class="card-btn"><a href="https://mobirise.com" class="btn btn-primary">MORE</a></div>
                     </div>
                 </div>
@@ -220,7 +220,7 @@
                     <div class="card-img"><img src="assets/images/google-form-317x159.jpg" class="card-img-top"></div>
                     <div class="card-block">
                         <h4 class="card-title"></h4>
-                        <h5 class="card-subtitle"><a href="https://drive.google.com/file/d/1AfEbyLAQuqyDOt9SNL-_VDNe1hods_Q0/view?usp=drivesdk">Cara Mengakses Aplikasi Google Form</a><br><br><span style="font-style: normal;">https://drive.google.com/file/d/1AfEbyLAQuqyDOt9SNL-_VDNe1hods_Q0/view?usp=drivesdk</span></h5>
+                        <h5 class="card-subtitle"><a href="https://drive.google.com/file/d/1AfEbyLAQuqyDOt9SNL-_VDNe1hods_Q0/view?usp=drivesdk">Cara Mengakses Aplikasi Google Form</a><br><br><br></h5>
                         <p class="card-text"></p>
                         <div class="card-btn"><a href="https://mobirise.com" class="btn btn-primary">MORE</a></div>
                     </div>
@@ -232,9 +232,9 @@
                 <div class="card cart-block">
                     <div class="card-img"><img src="assets/images/plickers-172x130.jpg" class="card-img-top"></div>
                     <div class="card-block">
-                        <h4 class="card-title">Cara mengakses aplikasi Pilckers</h4>
+                        <h4 class="card-title"><a href="https://drive.google.com/file/d/1KAC7O0iaACUY1Xp2XCmVLUp6yJA3n6m-/view?usp=drivesdk">Cara</a> mengakses aplikasi Pilckers</h4>
                         <h5 class="card-subtitle"></h5>
-                        <p class="card-text">https://drive.google.com/file/d/1KAC7O0iaACUY1Xp2XCmVLUp6yJA3n6m-/view?usp=drivesdk</p>
+                        <p class="card-text"></p>
                         <div class="card-btn"><a href="https://mobirise.com" class="btn btn-primary">MORE</a></div>
                     </div>
                 </div>
